# hyperhdr-webos-loader

./: .eslintrc.json  .gitignore  .gitmodules  README.md  appinfo.json  build.sh  build_hyperhdr.sh  build_hyperion_ng.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  poll_hyperhdr_tag.yml
frontend/views/: MainPanel.js
resources/: flat_lut_lin_tables.3d.xz
service/: CMakeLists.txt  adapter.ts  buffer-shim.js  package.json  protocol.ts  service.ts  services.json
service/scripts/: autostart.sh  start_hyperhdr  start_hyperiond
service/src/: daemon.c  daemon.h  log.c  log.h  main.c  service.c  service.h  utils.c
